--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "clase-hbs",
   "version": "1.0.0",
-  "description": "",
+  "description": "![logotipo de The Bridge](https://user-images.githubusercontent.com/27650532/77754601-e8365180-702b-11ea-8bed-5bc14a43f869.png 'logotipo de The Bridge')",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js"
   },
+  "prisma":{
+    "seed": "node prisma/seed.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@prisma/client": "^5.6.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
